--- a/PS1/18.100A_ps1.tex
+++ b/PS1/18.100A_ps1.tex
@@ -94,5 +94,21 @@
 	\end{equation}
 \end{proof}
 
-
+\section*{Problem 4}
+\begin{proof}
+	(By induction). 
+	
+	$P(n)$ is the hypothesis that for $n\in\mathbb{N}$, $n^3 + 5n$ is divisible by $6$.
+	
+	(Base case): $1^3 + 5\cdot1 = 1 + 5 = 6$ is divisible by 6, so $P(1)$ is true. 
+	
+	(Inductive step): Assume $P(m)$ holds, i.e. 6 divides $m^3 + 5m$. Then
+	\begin{align}
+		(m+1)^3 + 5m &= m^3 + 3m^2 + 3m + 1 + 5m + 1 \\
+		&= m^3 + 5m + 6 + 3m(m+1), 
+	\end{align}
+	where by the inductive hypothesis $m^3 +5m + 6$ is divisible by 6 and $3m(m+1)$ is also divisible by 6 because it is divisible by both 3 and 2. So, their sum $(m+1)^3 + 5(m+1)$ must also be divisible by 6, which means $P(m)\implies P(m+1)$.
+	
+	Thus, $\forall n\in\mathbb{N}$, $n^3 + 5n$ is divisible by 6. 
+\end{proof}
 \end{document}
