--- a/PS1/18.100A_ps1.tex
+++ b/PS1/18.100A_ps1.tex
@@ -111,4 +111,11 @@
 	
 	Thus, $\forall n\in\mathbb{N}$, $n^3 + 5n$ is divisible by 6. 
 \end{proof}
+
+\section*{Problem 5}
+\begin{proof}
+	Let $A_1, A_2, A_3, ..., A_n, A_{n+1}, ...$ be finite sets, and let there be infinitely many of them. We wish to find an example where $|\bigcup\limits_{i=1}^{\infty} A_i| = \infty$. 
+	
+	To satisfy this, choose $A_{i} = \{i\}$. Then $A_1 \cup A_2 \cup A_3 \cdots = \{1, 2, 3, ... \} = \mathbb{N}$. So their union is not a finite set, as desired. 
+\end{proof}
 \end{document}
