--- a/PS1/18.100A_ps1.tex
+++ b/PS1/18.100A_ps1.tex
@@ -139,4 +139,20 @@ so we identify $r_1 = 1$ and $s_1=2$. Thus,
 \begin{equation}
 	q = \frac{p_1^{r_1}}{q_1^{s_1}} = \frac{2}{3^2} = \frac{2}{9}.
 \end{equation}
+
+\subsection*{(b)}
+\begin{proof}
+	We first show that $f$ is injective.
+	
+	Let $f(t_1)=f(t_2)$. Then we consider two cases:
+	
+	Case 1: $f(t_1) = f(t_2) = 1$,
+	
+	$\implies t_1 = 1$ and $t_2 = 1$
+	
+	$\implies t_1 = t_2$.
+	
+	Case 2: 
+\end{proof}
+
 \end{document}
