--- a/PS2/18.100A_ps2.tex
+++ b/PS2/18.100A_ps2.tex
@@ -29,5 +29,18 @@
 	
 	which is a contradiction since we assumed that $y<z$. Thus, $xy>xz$.
 \end{proof}
+
+\section*{Problem 2}
+\begin{proof}
+	We want to show that $\exists b\in S$ such that $\forall a\in A$, $a\leq b$.
+
+	Since $S$ is ordered, then for every $x,y\in S$, we have that either $x<y$, $x>y$, or $x=y$. But since $A\subset S$, then $\forall a\in A$, $a\in A \implies a\in S$. 
+	
+	$\implies \forall a,b\in A$, either $a<b$, $a>b$, or $a=b$. 
+	
+	So $A$ is also ordered. Since $A$ is finite, then $\exists a_0 \in A$ such that $\forall a \in A$, $a_0 \geq a$. 
+	
+	Thus, $A$ is bounded.
+\end{proof}
 	
 \end{document}
