--- a/PS2/18.100A_ps2.tex
+++ b/PS2/18.100A_ps2.tex
@@ -58,5 +58,16 @@
 	
 	Therfore, both $\inf{A}$ and $\sup{A}$ exist in $A$.
 \end{proof}
+
+\section*{Problem 3}
+\begin{proof}
+	Since $b$ is an upper bound for $A$, then $\forall a\in A$, $a\leq b$. 
+	
+	Suppose $b \neq \sup{A}$. Then $\exists$ some other element $c \in A$ such that $c = \sup{A}$, since by problem 2, $A$ must have a supremum because it is finite and a subset of an ordered set. But since $b \in A$, then $b \leq c$. 
+	
+	However, we assumed that $b$ is an upper bound for $A$, so since $c \in A$, this imples that $b \geq c$. Thus we have that $b \leq c$ and $b \geq c$, so it must hold that $b=c$.
+	
+	Therefore $b = \sup{A}$, as desired. 
+\end{proof}
 	
 \end{document}
