--- a/PS2/18.100A_ps2.tex
+++ b/PS2/18.100A_ps2.tex
@@ -83,4 +83,18 @@
 	Therefore, $A$ does indeed contain a countably infinite subset.
 \end{proof}
 
+\section*{Problem 5}
+\subsection*{(a)}
+\begin{proof}
+	(Arithmetic Mean - Geometric Mean Inequality)
+	
+	Consider the difference $\sqrt{x} - \sqrt{y}$. We compute:
+	\begin{align}
+		0 \leq \left(\sqrt{x} - \sqrt{y}\right)^2 &= x + y -2 \sqrt{xy} \\
+		\implies 2\sqrt{xy} &\leq x + y \label{amgm}
+	\end{align} 
+	Dividing both sides of \eqref{amgm} by 2, we obtain the desired result: $\sqrt{xy} \leq \frac{x + y}{2}$.
+\end{proof}
+\subsection{(b)}
+
 \end{document}
