--- a/PS2/18.100A_ps2.tex
+++ b/PS2/18.100A_ps2.tex
@@ -115,4 +115,24 @@
 	Thus, $\frac{x+y}{2}=\sqrt{xy} \iff x=y$.
 \end{proof}
 
+\section*{Problem 6}
+TODO TODO TODO TODO TODO
+
+\section*{Problem 7}
+\subsection*{(a)}
+\begin{proof}
+	Let $E = \{x\in\mathbb{R} \: | \: x>0 \textrm{ and } x^3 < 2\}$. So $\forall x \in E$, $x^3 < 2$. Then
+	\begin{align}
+		&\implies x^3 - 2 < 0 \\
+		&\implies \left(x-2^{\frac{1}{3}}\right)\left(x^2 + 2^{\frac{1}{3}}x + 2^{\frac{2}{3}}\right) < 0.
+	\end{align}
+	But $x>0 \implies x^2 + 2^{\frac{1}{3}}x + 2^{\frac{2}{3}} > 0$, so $\forall x \in E$, 
+	\begin{align}
+		&\implies x-2^{\frac{1}{3}} < 0 \\
+		&\implies x < \sqrt[3]{x}.
+	\end{align}
+	Thus, $E$ is bounded above.
+\end{proof}
+
+\subsection*{(b)}
 \end{document}
