--- a/PS2/18.100A_ps2.tex
+++ b/PS2/18.100A_ps2.tex
@@ -129,10 +129,33 @@ TODO TODO TODO TODO TODO
 	But $x>0 \implies x^2 + 2^{\frac{1}{3}}x + 2^{\frac{2}{3}} > 0$, so $\forall x \in E$, 
 	\begin{align}
 		&\implies x-2^{\frac{1}{3}} < 0 \\
-		&\implies x < \sqrt[3]{x}.
+		&\implies x < \sqrt[3]{2}.
 	\end{align}
 	Thus, $E$ is bounded above.
 \end{proof}
 
 \subsection*{(b)}
+\begin{proof}
+	Let $r = \sup{E}$, which exists by part (a) and problem 2 (b). We first show that $r>0$. 
+	
+	By definition of the supremum and the set $E$, $\forall x \in E$, $x\leq r$ and $x>0$. Thus $0<x\leq r$, so $r$ is indeed positive.
+	
+	Next we show that $r^3 = 2$. 
+	
+	Suppose, toward a contradiction, that $r > \sqrt[3]{2}$. Since $r = \sup{E}$, then $x\leq r$ for any $x \in E$. But since $\sqrt[3]{2}$ is an upper bound for $E$, then $x < \sqrt[3]{2}$ $\forall x\in E$. So 
+	\begin{align}
+		&\implies x < \sqrt[3]{2} < r \\
+		&\implies r \neq \sup{E}, \quad \Rightarrow\Leftarrow.
+	\end{align}
+	This is a contradiction, since we assumed that $r = \sup{E}$. Thus $r \leq \sqrt[3]{2} \implies r^3 \leq 2$.
+	
+	Now suppose instead, toward another contradiction, that $r<\sqrt[3]{2}$. Then
+	\begin{equation}
+		r^3 < \left(\sqrt[3]{2}\right)^3 = 2.
+	\end{equation}
+	But then $r\in E$, and $\sqrt[3]{2}>r$ which implies that $r \neq \sup{E}$, another contradiction. Thus $r \geq \sqrt[3]{2}$. So we have shown that both $r \leq \sqrt[3]{2}$ and $r \geq \sqrt[3]{2}$. Then we conclude $r=\sqrt[3]{2}$.
+	
+	Hence, $r^3 = 2$.
+\end{proof}
+
 \end{document}
