--- a/PS2/18.100A_ps2.tex
+++ b/PS2/18.100A_ps2.tex
@@ -116,7 +116,21 @@
 \end{proof}
 
 \section*{Problem 6}
-TODO TODO TODO TODO TODO
+\subsection*{(a)}
+\begin{proof}
+	Since $A$ is bounded, then $\exists a_0$ such that $\forall a \in A$, $a \geq a_0$. Similarly, since $B$ is bounded, then $\exists b_0$ such that $\forall b \in B$, $b \geq b_0$. 
+	
+	Let $c\in C$, i.e. let $a\in A$, $b\in B$, and take $c = a + b$. Then for all such $c$, 
+	\begin{equation}
+		c = a + b \geq a_0 + b \geq a_0 + b_0
+	\end{equation}
+	Hence, the set $C$ is bounded below. By the same logic, we can show that $\forall c\in C$, $c<a_1 + b_1$ where $a_1$ and $b_1$ are upper bounds for $A$ and $B$, respectively. So $C$ is also bounded above.
+	
+	Therefore, $C$ is bounded.
+\end{proof}
+
+\subsection*{(b)}
+TODO TODO TODO
 
 \section*{Problem 7}
 \subsection*{(a)}
