--- a/PS3/18.100A_ps3.tex
+++ b/PS3/18.100A_ps3.tex
@@ -124,4 +124,16 @@
 	Therefore we conclude that $h$ is a bijection, hence $|A\cup B| = |\mathbb{N}|$.
 \end{proof}
 
+\subsection*{(b)}
+\begin{proof}
+	(By contradiction). Suppose instead that $\mathbb{R}\backslash \mathbb{Q}$ is countable.  We write:
+	\begin{align}
+		\mathbb{R} &= \mathbb{R}\backslash \mathbb{Q} \cup \mathbb{Q} \\
+		\implies |\mathbb{R}| &= |\mathbb{R}\backslash \mathbb{Q} \cup \mathbb{Q}|.
+	\end{align}
+	We know that $\mathbb{Q}$ is countably infinite, so $|\mathbb{Q}| = |\mathbb{N}|$. We also assumed that $\mathbb{R}\backslash\mathbb{Q}$ is countable, so $|\mathbb{R}\backslash \mathbb{Q}|= |\mathbb{N}|$. Then by part \textbf{(a)}, we have that $|\mathbb{R}| = |\mathbb{N}|$, but the reals are uncountable, so contradiction $(\Rightarrow \Leftarrow)$.
+	
+	Hence $\mathbb{R}\backslash\mathbb{Q}$ must be uncountable.
+\end{proof}
+
 \end{document}
