--- a/PS4/18.100A_ps4.tex
+++ b/PS4/18.100A_ps4.tex
@@ -30,4 +30,14 @@
 	Therefore, we conclude that $[a,b]$ is closed.
 \end{proof}
 
+\subsection*{(b)}
+\begin{proof}
+	Consider the complement of the integers in the real numbers, $\mathbb{Z}^c = \mathbb{R}\backslash\mathbb{Z}$. We may write this complement as a union of open sets, where each of the open sets represents the set of numbers between (but not including) consecutive integers:
+	\begin{equation}
+		\mathbb{Z}^c = \bigcup\limits_{n\in\mathbb{Z}}(n, n+1).
+	\end{equation}
+	Since the sets being unioned are all open, then so is the union, i.e. $\mathbb{Z}^c$ is open.
+	
+	Thus, $\mathbb{Z}$ is closed.
+\end{proof}
 \end{document}
