--- a/PS3/18.100A_ps3.tex
+++ b/PS3/18.100A_ps3.tex
@@ -178,7 +178,7 @@
 		&\implies b<y<2x-b< \infty \\
 		&\implies y \in (b, \infty).
 	\end{align}
-	Therefore, $(b, \infty)$ is closed. 
+	Therefore, $(b, \infty)$ is open. 
 \end{proof}
 
 \subsection*{(b)}
